fixed table column corruption on small screens

--- a/src/assets/styles/_table.scss
+++ b/src/assets/styles/_table.scss
@@ -42,7 +42,7 @@ tr {
     td {
       font-size: 17px;
       padding: 5px;
-      width: 30%;
+      width: 100%;
     }
   }
 }
